[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
requests = "^2.28.1"
poetry = "^1.1.14"
pygame = "^2.1.2"
rasa = "^3.2.2"
replit = "^3.2.4"
mod9-asr = "^1.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"